# floral

./: .gitignore  CMakeLists.txt  _build_prj_clang.bat  _gen_prj_clang_android_arm64.bat  _gen_prj_clang_win.bat  jamfile.jam  jamroot.jam  make.bat
cmake/: utils.cmake
include/: Win32App.h  assertions.h  floral.h  macros.h  stdaliases.h
include/assert/: assert.h
include/cmds/: crc_string.h  path.h
include/containers/: array.h  double_queue.h  fast_array.h  fast_array.hpp  queue.h  queue.hpp  ring_buffer.h
include/floral/: macros.h  stdaliases.h
include/floral/assert/: StackWalker.h  assert.h
include/floral/cmds/: crc_string.h  path.h  string.h  string.inl
include/floral/comgeo/: shapegen.h
include/floral/containers/: array.h  double_queue.h  fast_array.h  fast_array.hpp  queue.h  ring_buffer.h  text.h  text.hpp
include/floral/function/: functor.h  simple_callback.h
include/floral/gpds/: camera.h  geometry.h  mat.h  quaternion.h  rect.h  vec.h  vec.inl
include/floral/io/: filesystem.h  filesystem.inl  nativeio.h
include/floral/math/: coordinate.h  easings.h  intersect.h  rng.h  rng.inl  transform.h  utils.h
include/floral/thread/: condition_variable.h  mutex.h  posix_condition_variable.h  posix_mutex.h  posix_thread.h  thread.h  thread_base.h  windows_condition_variable.h  windows_mutex.h  windows_thread.h
include/floral/types/: atomic_types.h  condition.h  type_conv.h  type_list.h  type_traits.h
include/function/: functor.h  simple_callback.h
include/gpds/: camera.h  geometry.h  mat.h  quaternion.h  rect.h  vec.h
include/io/: nativeio.h
include/math/: coordinate.h  easings.h  intersect.h  transform.h  utils.h
include/state_machine/: state_machine.h
include/thread/: ConditionVariable.h  Mutex.h  Thread.h  ThreadBase.h  WindowsConditionVariable.h  WindowsMutex.h  WindowsThread.h  condition_variable.h  posix_condition_variable.h  posix_mutex.h  posix_thread.h  thread_base.h  windows_condition_variable.h  windows_mutex.h  windows_thread.h
include/types/: atomic_types.h  type_list.h  type_traits.h
src/: Win32App.cpp  main.cpp
src/assert/: StackWalker.cpp  assert.cpp
src/cmds/: crc_string.cpp  path.cpp  string.cpp
src/comgeo/: shapegen.cpp
src/containers/: queue.cpp  text.cpp
src/cu/: unitybuild_0.cpp
src/gpds/: camera.cpp  geometry.cpp
src/io/: filesystem.cpp  filesystem_posix.cpp  filesystem_windows.cpp  nativeio.cpp  nativeio_posix.cpp
src/math/: coordinate.cpp  intersect.cpp  transform.cpp  tri_aabb_intersect.inl  utils.cpp
src/thread/: Mutex.cpp  Thread.cpp  WindowsConditionVariable.cpp  WindowsMutex.cpp  WindowsThread.cpp  mutex.cpp  posix_condition_variable.cpp  posix_mutex.cpp  posix_thread.cpp  thread.cpp  windows_condition_variable.cpp  windows_mutex.cpp  windows_thread.cpp
tests/: CMakeLists.txt
tests/src/: array_tests.cpp  intersect_tests.cpp  main.cpp  mat_tests.cpp  multithread_ring_buffer_test.cpp  multithread_ring_buffer_test.h  vec_tests.cpp
